--- a/source/sass/2017/variables.scss
+++ b/source/sass/2017/variables.scss
@@ -29,8 +29,8 @@ $base-head: #111;
 $base-text: #345;
 $base-mute: #667788; // gray
 $base-inline-code: #678;
-$base-inline-code-border: #ddd;
-$base-inline-code-background: #f3f3f3;
+$base-inline-code-border: #eee;
+$base-inline-code-background: #f9f9f9;
 
 $base-a: adjust-color(#8370bd, $lightness: -5%); // indigo
 $base-b: adjust-color(#2b72a2, $lightness: -5%); // blue
