--- a/source/sass/2017/variables.scss
+++ b/source/sass/2017/variables.scss
@@ -29,8 +29,7 @@ $base-head: #111;
 $base-text: #345;
 $base-mute: #667788; // gray
 $base-inline-code: #678;
-$base-inline-code-border: #eee;
-$base-inline-code-background: #f9f9f9;
+$base-inline-code-background: #eff0f1; // use in white background
 
 $base-a: adjust-color(#8370bd, $lightness: -5%); // indigo
 $base-b: adjust-color(#2b72a2, $lightness: -5%); // blue
@@ -51,6 +50,9 @@ $gray-text: $base-mute;
 
 $line-color: rgba($base-mute, 0.05);
 $dark-line-color: rgba($base-mute, 0.2);
+
+$base-inline-code-background-dark: adjust-color($base-inline-code-background, $lightness: -1%); // use in darker background
+$base-inline-code-background-light: adjust-color($base-inline-code-background, $lightness: +4%); // use outside card
 
 //
 // Variants
