--- a/source/css/main.css
+++ b/source/css/main.css
@@ -653,8 +653,21 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
 
 .MarkdownBody .h3-section > .body > pre ~ p > code,
 .MarkdownBody .h3-section > .body > ul ~ p > code,
+.MarkdownBody .h3-section > .body > ol ~ p > code,
 .MarkdownBody .h3-section > .body > iframe ~ p > code,
 .MarkdownBody .h3-section > .body > table ~ p > code {
+  background-color: #ecedef; }
+
+.MarkdownBody .h3-section > .body > pre ~ ul code,
+.MarkdownBody .h3-section > .body > pre ~ ol code,
+.MarkdownBody .h3-section > .body > ul ~ ul code,
+.MarkdownBody .h3-section > .body > ul ~ ol code,
+.MarkdownBody .h3-section > .body > ol ~ ul code,
+.MarkdownBody .h3-section > .body > ol ~ ol code,
+.MarkdownBody .h3-section > .body > iframe ~ ul code,
+.MarkdownBody .h3-section > .body > iframe ~ ol code,
+.MarkdownBody .h3-section > .body > table ~ ul code,
+.MarkdownBody .h3-section > .body > table ~ ol code {
   background-color: #ecedef; }
 
 .MarkdownBody code {
@@ -1384,12 +1397,12 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
         border-top: solid 1px rgba(102, 119, 136, 0.05); }
   .h3-section > .body > ol {
     margin: 0;
-    padding: 16px 16px 16px 32px; }
+    padding: 16px 16px 16px 40px; }
     .h3-section > .body > ol ol, .h3-section > .body > ol ul {
       padding-inline-start: 16px; }
     .h3-section > .body > ol > li {
       padding: 8px;
-      padding-left: 4px;
+      padding-left: 10px;
       position: relative; }
       .h3-section > .body > ol > li > p {
         margin: 0;
@@ -1417,28 +1430,47 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
         font-size: 12px; } }
     .h3-section > .body > h4 + * {
       border-top: solid 1px rgba(102, 119, 136, 0.05); }
-  .h3-section > .body > pre ~ p,
-  .h3-section > .body > ul ~ p,
-  .h3-section > .body > iframe ~ p,
-  .h3-section > .body > table ~ p {
-    background: #f8f9fa;
-    color: #667788;
+  .h3-section > .body > pre,
+  .h3-section > .body > ul,
+  .h3-section > .body > ol,
+  .h3-section > .body > iframe,
+  .h3-section > .body > table {
     /* Links */ }
-    .h3-section > .body > pre ~ p a,
-    .h3-section > .body > pre ~ p a:visited,
-    .h3-section > .body > ul ~ p a,
-    .h3-section > .body > ul ~ p a:visited,
-    .h3-section > .body > iframe ~ p a,
-    .h3-section > .body > iframe ~ p a:visited,
-    .h3-section > .body > table ~ p a,
-    .h3-section > .body > table ~ p a:visited {
+    .h3-section > .body > pre ~ p,
+    .h3-section > .body > pre ~ ul,
+    .h3-section > .body > pre ~ ol,
+    .h3-section > .body > ul ~ p,
+    .h3-section > .body > ul ~ ul,
+    .h3-section > .body > ul ~ ol,
+    .h3-section > .body > ol ~ p,
+    .h3-section > .body > ol ~ ul,
+    .h3-section > .body > ol ~ ol,
+    .h3-section > .body > iframe ~ p,
+    .h3-section > .body > iframe ~ ul,
+    .h3-section > .body > iframe ~ ol,
+    .h3-section > .body > table ~ p,
+    .h3-section > .body > table ~ ul,
+    .h3-section > .body > table ~ ol {
+      background: #f8f9fa;
+      color: #667788; }
+    .h3-section > .body > pre a,
+    .h3-section > .body > pre a:visited,
+    .h3-section > .body > ul a,
+    .h3-section > .body > ul a:visited,
+    .h3-section > .body > ol a,
+    .h3-section > .body > ol a:visited,
+    .h3-section > .body > iframe a,
+    .h3-section > .body > iframe a:visited,
+    .h3-section > .body > table a,
+    .h3-section > .body > table a:visited {
       color: #345;
       text-decoration: none;
       border-bottom: solid 1px rgba(102, 119, 136, 0.05); }
-    .h3-section > .body > pre ~ p a:hover,
-    .h3-section > .body > ul ~ p a:hover,
-    .h3-section > .body > iframe ~ p a:hover,
-    .h3-section > .body > table ~ p a:hover {
+    .h3-section > .body > pre a:hover,
+    .h3-section > .body > ul a:hover,
+    .h3-section > .body > ol a:hover,
+    .h3-section > .body > iframe a:hover,
+    .h3-section > .body > table a:hover {
       color: #26648e; }
   .h3-section > .body > *:not(:first-child) {
     border-top: solid 1px rgba(102, 119, 136, 0.05); }
