--- a/source/sass/2017/markdown/code.scss
+++ b/source/sass/2017/markdown/code.scss
@@ -23,7 +23,7 @@
       }
       & ~ ul,
       & ~ ol {
-        & code {
+        & :not(pre) > code {
           background-color: $base-inline-code-background-dark;
         }
       }
