--- a/source/sass/2017/variables.scss
+++ b/source/sass/2017/variables.scss
@@ -14,7 +14,7 @@ $area-width: $column * 3 + 32px;
  */
 
 $system-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
-$system-mono: "Sarasa Mono T SC", "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
+$system-mono: "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
 $body-font: $system-sans;
 $heading-font: $system-sans;
 $monospace-font: cousine, $system-mono;
