style: 💄 change code block color to #345 (same as p)

--- a/source/sass/2017/variables.scss
+++ b/source/sass/2017/variables.scss
@@ -28,6 +28,7 @@ $base-panel: white;
 $base-head: #111;
 $base-text: #345;
 $base-mute: #667788; // gray
+$base-code: #345;
 $base-inline-code: #678;
 $base-inline-code-background: #eff0f1; // use in white background
 
