--- a/source/sass/2017/components/h2-section.scss
+++ b/source/sass/2017/components/h2-section.scss
@@ -26,7 +26,7 @@
 
   & > pre {
     padding: $gut;
-    margin: 0 0 16px 0;
+    margin: 0 0 16px;
     box-shadow: $shadow3;
     border-radius: 2px;
 
