--- a/source/sass/2017/components/pages-list.scss
+++ b/source/sass/2017/components/pages-list.scss
@@ -73,7 +73,7 @@
   @include font-size(1);
   border-bottom: solid 1px $dark-line-color;
   margin: 16px 0;
-  padding: 0 0 16px 0;
+  padding: 0 0 16px;
   font-weight: normal;
   color: $base-a;
 }
