--- a/source/sass/2017/base/base.scss
+++ b/source/sass/2017/base/base.scss
@@ -2,26 +2,28 @@
  * Base
  */
 
-html, body {
+html,
+body {
   background: $base-body;
+  color: $base-text;
   font-family: $body-font;
   font-size: 14px;
   line-height: 1.6;
-  color: $base-text;
   overflow-x: hidden;
 }
 
 body {
   @include font-size(0);
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 /*
  * Code
  */
 
-pre, code {
+pre,
+code {
   font-family: $monospace-font;
   letter-spacing: -0.03em;
 }
