--- a/source/sass/2017/components/announcements-item.scss
+++ b/source/sass/2017/components/announcements-item.scss
@@ -1,12 +1,12 @@
 .announcements-item {
   & {
-    position: relative;
-    padding: 16px;
-    box-shadow: $shadow6;
-    border-radius: 1px;
-    background: white;
-    padding-right: 48px;
     animation: announcements-item-flyin 500ms ease-out;
+    background: white;
+    border-radius: 1px;
+    box-shadow: $shadow6;
+    padding: 16px;
+    padding-right: 48px;
+    position: relative;
     transition: opacity 500ms linear, transform 500ms ease-out;
   }
 
@@ -16,8 +16,8 @@
 
   & > .title {
     @include font-size(1);
-    font-weight: normal;
     color: $base-a;
+    font-weight: normal;
     margin: 0;
     padding: 0;
   }
@@ -32,17 +32,17 @@
   }
 
   & > .close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 40px;
+    border: 0;
+    cursor: pointer;
     height: 40px;
     line-height: 40px;
-    text-align: center;
-    border: 0;
     margin: 0;
     padding: 0;
-    cursor: pointer;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    width: 40px;
 
     &:hover,
     &:focus {
@@ -51,19 +51,19 @@
   }
 
   & > .close::before {
-    content: "\00D7";
+    content: '\00D7';
     font-size: 14px;
   }
 }
 
 @keyframes announcements-item-flyin {
   0% {
-    transform: translate3d(0, 32px, 0);
     opacity: 0;
+    transform: translate3d(0, 32px, 0);
   }
 
   100% {
-    transform: translate3d(0, 0, 0);
     opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
