--- a/source/sass/2017/components/side-ad.scss
+++ b/source/sass/2017/components/side-ad.scss
@@ -5,27 +5,27 @@
   @media (min-width: 961px) {
     position: absolute;
     right: 32px;
+    text-align: left;
     top: 80px;
     width: 130px;
-    text-align: left;
 
     .carbon-img {
       margin-bottom: 16px;
     }
   }
 
-  .carbon-text:first-line {
+  .carbon-text::first-line {
     color: $base-head;
     font-weight: bold;
   }
 
   .carbon-poweredby::before {
-    display: block;
-    content: '';
-    width: 32px;
-    height: 1px;
     background: $dark-line-color;
+    content: '';
+    display: block;
+    height: 1px;
     margin: 12px 0;
+    width: 32px;
   }
 
   @media (max-width: 960px) {
@@ -35,9 +35,9 @@
     }
 
     &::after {
+      clear: both;
       content: '';
       display: table;
-      clear: both;
       zoom: 1;
     }
 
