--- a/source/sass/2017/variables.scss
+++ b/source/sass/2017/variables.scss
@@ -13,8 +13,8 @@ $area-width: $column * 3 + 32px;
  * Fonts
  */
 
-$system-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
-$system-mono: "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
+$system-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Helvetica, Arial, 'Microsoft Yahei', 'Hiragino Sans GB', 'Heiti SC', 'WenQuanYi Micro Hei', sans-serif;
+$system-mono: 'Fira Mono', 'DejaVu Sans Mono', Menlo, Consolas, 'Liberation Mono', Monaco, 'Lucida Console', monospace;
 $body-font: $system-sans;
 $heading-font: $system-sans;
 $monospace-font: cousine, $system-mono;
@@ -27,7 +27,7 @@ $base-body: #f1f3f5;
 $base-panel: white;
 $base-head: #111;
 $base-text: #111;
-$base-mute: #667788; // gray
+$base-mute: #678; // gray
 $base-code: #111;
 $base-inline-code: #678;
 $base-inline-code-background: #eff0f1; // use in white background
@@ -59,25 +59,21 @@ $base-inline-code-background-light: adjust-color($base-inline-code-background, $
 // Variants
 //
 
-$base-a-gradient: linear-gradient(
-  5deg,
-  $base-a,
-  adjust-color($base-a, $lightness: 2%, $hue: 16deg));
+$base-a-gradient: linear-gradient(5deg,
+$base-a,
+adjust-color($base-a, $lightness: 2%, $hue: 16deg));
 
 //
 // Shadows
 //
 
-$shadow2:
-  0 1px 1px rgba($base-mute, 0.55);
+$shadow2: 0 1px 1px rgba($base-mute, 0.55);
 
-$shadow3:
-  0 6px 8px rgba($base-mute, 0.03),
-  0 1px 2px rgba($base-mute, 0.30);
+$shadow3: 0 6px 8px rgba($base-mute, 0.03),
+  0 1px 2px rgba($base-mute, 0.3);
 
-$shadow6:
-  0 6px 8px rgba($base-mute, 0.03),
-  0 1px 2px rgba($base-mute, 0.30),
+$shadow6: 0 6px 8px rgba($base-mute, 0.03),
+  0 1px 2px rgba($base-mute, 0.3),
   0 8px 12px rgba($base-b3, 0.1);
 
 /*
