--- a/source/sass/2017/components/h3-section.scss
+++ b/source/sass/2017/components/h3-section.scss
@@ -15,9 +15,6 @@
     overflow-x: auto;
   }
 
-  
-  
-
   /* Collapse/flush */
   @media (max-width: 480px) {
     box-shadow: $shadow2;
@@ -40,122 +37,23 @@
       border-bottom-right-radius: 3px;
     }
   }
-}
-
-/*
- * Heading
- */
-
-.h3-section > h3 {
-    margin-bottom: 16px;
-    margin-top: 8px;
-    overflow: hidden;
-    white-space: nowrap;
-
-  // Mobile: the padding below h3-section is enough
-  @media (max-width: 768px) {
-    margin-top: 0;
-  }
-
-  // Horizontal line
-  &::after {
-    background: linear-gradient(to right, rgba($base-a, 0.2), transparent 80%);
-    content: '';
-    display: inline-block;
-    height: 1px;
-    margin-left: 24px;
-    vertical-align: middle;
-    width: 100%;
-  }
-}
-
-/*
+  /*
  * Children
  */
-
-.h3-section > .body {
-  /* Lists */
-  & > ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 16px;
-
-    & ol,
-    & ul {
-      padding-inline-start: 16px;
-    }
-
-    & > li {
-      padding: 8px;
-      padding-left: 32px + 4px;
-      position: relative;
-
-      & > p {
-        margin: 0;
-        padding: 0;
-      }
-
-      &::before {
-        background: $gray-text;
-        border-radius: 50%;
-        content: '';
-        display: inline-block;
-        height: 4px;
-        left: 16px;
-        position: absolute;
-        top: 16px + 2px;
-        width: 4px;
-      }
-
-      & + li {
-        border-top: solid 1px $line-color;
-      }
-    }
-  }
-
-  & > ol {
-    margin: 0;
-    padding: 16px 16px 16px 40px;
-
-    & ol,
-    & ul {
-      padding-inline-start: 16px;
-    }
-
-    & > li {
-      padding: 8px;
-      padding-left: 10px;
-      position: relative;
-
-      & > p {
-        margin: 0;
-        padding: 0;
-      }
-
-      & + li {
-        border-top: solid 1px $line-color;
-      }
-    }
-  }
-
   /* Paragraphs */
   & > p {
     margin: 0;
     padding: 16px;
   }
-
-  /* Headings in between bodies */
-  & > h4 {
-    @include font-size(-1);
-    background: $gray-bg;
-    color: $gray-text;
-    font-weight: normal;
+  & > ul {
+    list-style-type: none;
     margin: 0;
-    padding: 4px 16px;
+    padding: 16px;
+  }
 
-    & + * {
-      border-top: solid 1px $line-color;
-    }
+  & > ol {
+    margin: 0;
+    padding: 16px 16px 16px 40px;
   }
 
   /* Description paragraphs */
@@ -184,16 +82,111 @@
     }
   }
 
+  /* Lists */
+
+  & > ol ol,
+  & > ol ul {
+    padding-inline-start: 16px;
+  }
+
+  & > ul > li {
+    padding: 8px;
+    padding-left: 32px + 4px;
+    position: relative;
+
+    &::before {
+      background: $gray-text;
+      border-radius: 50%;
+      content: "";
+      display: inline-block;
+      height: 4px;
+      left: 16px;
+      position: absolute;
+      top: 16px + 2px;
+      width: 4px;
+    }
+  }
+
+  & > ol > li {
+    padding: 8px;
+    padding-left: 10px;
+    position: relative;
+
+    & + li {
+      border-top: solid 1px $line-color;
+    }
+  }
+
+  & > ul > li + li {
+    border-top: solid 1px $line-color;
+  }
+
+  & > ul > ol,
+  & > ul ul {
+    padding-inline-start: 16px;
+  }
+
+  // Collapse paragraphs together
+  & > p + p {
+    border-top: 0;
+    margin-top: -1.5em;
+  }
+  & > ol > li > p {
+    margin: 0;
+    padding: 0;
+  }
+  & > ul > li > p {
+    margin: 0;
+    padding: 0;
+  }
+  & > p + p:not(:first-child) {
+    border-top: 0;
+    margin-top: -1.5em;
+  }
+
+  /* Headings in between bodies */
+  & > h4 {
+    @include font-size(-1);
+    background: $gray-bg;
+    color: $gray-text;
+    font-weight: normal;
+    margin: 0;
+    padding: 4px 16px;
+
+    & + * {
+      border-top: solid 1px $line-color;
+    }
+  }
+
   // Line divisions
   & > *:not(:first-child) {
     border-top: solid 1px $line-color;
   }
+}
+/*
+ * Heading
+ */
 
-  // Collapse paragraphs together
-  & > p + p,
-  & > p + p:not(:first-child) {
-    border-top: 0;
-    margin-top: -1.5em;
+.h3-section > h3 {
+  margin-bottom: 16px;
+  margin-top: 8px;
+  overflow: hidden;
+  white-space: nowrap;
+
+  // Mobile: the padding below h3-section is enough
+  @media (max-width: 768px) {
+    margin-top: 0;
+  }
+
+  // Horizontal line
+  &::after {
+    background: linear-gradient(to right, rgba($base-a, 0.2), transparent 80%);
+    content: "";
+    display: inline-block;
+    height: 1px;
+    margin-left: 24px;
+    vertical-align: middle;
+    width: 100%;
   }
 }
 
@@ -216,20 +209,17 @@ ul.-also-see.-also-see.-also-see {
   background: $gray-bg;
   display: flex;
   flex-wrap: wrap;
+  list-style-type: none;
 
   & > li {
     border-top: solid 1px $dark-line-color;
     flex: 1 0 20%;
     padding: 24px;
+    list-style-type: none;
 
     & + li {
       border-left: solid 1px $dark-line-color;
     }
-  }
-
-  &,
-  & > li {
-    list-style-type: none;
   }
 
   & > li::before {
