--- a/source/sass/2017/components/h3-section-list.scss
+++ b/source/sass/2017/components/h3-section-list.scss
@@ -3,7 +3,7 @@
  * The body that is isotoped.
  */
 
-.h3-section-list {
+.code-section-list {
   & {
     @include section-gutter(margin-left, $multiplier: -1);
     @include section-gutter(margin-right, $multiplier: -1);
@@ -20,14 +20,14 @@
   }
 
   // Each section
-  & > .h3-section {
+  & > :is(.h3-section, .h4-section, .h5-section) {
     @include section-gutter(padding);
     float: left;
     width: 100%;
   }
 
   @media (min-width: 769px) {
-    & > .h3-section {
+    & > :is(.h3-section, .h4-section, .h5-section) {
       padding-top: 0;
     }
   }
@@ -37,43 +37,60 @@
  * Two column (default)
  */
 
-.h3-section-list,
-.h3-section-list.-two-column {
-  @media (min-width: 769px) {
-    & > .h3-section {
-      width: 50%;
-    }
-  }
-}
+// .code-section-list {
+//   @media (min-width: 769px) {
+//     & > .h3-section {
+//       width: 33.3%;
+//     }
+//     & > .h4-section {
+//       width: 50%;
+//     }
+//     & > .h3-section {
+//       width: 100%;
+//     }
+//   }
+// }
 
 /*
  * One column
  */
 
-.h3-section-list.-one-column {
-  & > .h3-section {
-    width: 100%;
-  }
+// .code-section-list {
+//   & > .h3-section {
+//     width: 33.3%;
+//   }
 
-  & > .h3-section + .h3-section {
-    margin-top: 16px;
-  }
-}
+//   & > .h3-section + .h3-section {
+//     margin-top: 16px;
+//   }
+// }
 
 /*
  * Three column
  */
 
-.h3-section-list.-three-column {
+.code-section-list {
   @media (min-width: 769px) {
     & > .h3-section {
       width: 50%;
+    }
+    & > .h4-section {
+      width: 100%;
+    }
+    & > .h5-section {
+      width: 100%;
     }
   }
 
   @media (min-width: 961px) {
     & > .h3-section {
       width: 33.33%;
+    }
+    & > .h4-section {
+      width: 50%;
+    }
+    & > .h5-section {
+      width: 100%;
     }
   }
 }
@@ -82,20 +99,20 @@
  * Three column, left reference
  */
 
-.h3-section-list.-left-reference {
-  @media (min-width: 769px) {
-    & > .h3-section {
-      width: 50%;
-    }
-  }
+// .code-section-list.-left-reference {
+//   @media (min-width: 769px) {
+//     & > .h3-section {
+//       width: 50%;
+//     }
+//   }
 
-  @media (min-width: 961px) {
-    & > .h3-section {
-      width: 66.67%;
-    }
+//   @media (min-width: 961px) {
+//     & > .h3-section {
+//       width: 66.67%;
+//     }
 
-    & > .h3-section:first-child {
-      width: 33.33%;
-    }
-  }
-}
+//     & > .h3-section:first-child {
+//       width: 33.33%;
+//     }
+//   }
+// }
