--- a/source/sass/2017/components/h3-section.scss
+++ b/source/sass/2017/components/h3-section.scss
@@ -2,11 +2,11 @@
  * H3 section
  */
 
-:is(.h3-section, .h4-section, .h5-section) > .body {
+:is(.h3-section, .h4-section, .h5-section)>.body {
   background: rgb(255, 255, 255);
   box-shadow: $shadow3;
 
-  > pre {
+  >pre {
     margin: 0;
     padding: 16px;
   }
@@ -27,69 +27,79 @@
       border-radius: 2px;
     }
 
-    & > :first-child {
+    &> :first-child {
       border-top-left-radius: 3px;
       border-top-right-radius: 3px;
     }
 
-    & > :last-child {
+    &> :last-child {
       border-bottom-left-radius: 3px;
       border-bottom-right-radius: 3px;
     }
   }
+
   /*
  * Children
  */
   /* Paragraphs */
-  & > p {
+  &>p {
     margin: 0;
     padding: 16px;
-  }
-  & > ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+
+    /* Link */
+    &>a,
+    &>a:visited {
+      color: $base-text;
+      text-decoration: none;
+      border-bottom: solid 1px $line-color;
+    }
+
+    &>a:hover {
+      color: $base-b;
+    }
   }
 
-  & > ol {
+  &>ul,
+  &>ol {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
 
   /* Description paragraphs */
-  & > pre,
-  & > ul,
-  & > iframe,
-  & > table {
-    & ~ p,
-    & ~ ul,
-    & ~ ol {
+  &>pre,
+  &>ul,
+  &>iframe,
+  &>table {
+
+    &~p,
+    &~ul,
+    &~ol {
       background: $gray-bg;
       color: $gray-text;
     }
 
-    /* Links */
-    & a,
-    & a:visited {
-      border-bottom: solid 1px $line-color;
-      color: $base-text;
-      text-decoration: none;
-    }
+    // /* Links */
+    // & a,
+    // & a:visited {
+    //   // border-bottom: solid 1px $line-color;
+    //   color: $base-text;
+    //   // text-decoration: none;
+    // }
 
-    & a:hover {
-      color: $base-b;
-    }
+    // & a:hover {
+    //   color: $base-b;
+    // }
   }
 
   /* Lists */
 
-  & > ol ol,
-  & > ol ul {
+  &>ol ol,
+  &>ol ul {
     padding-inline-start: 16px;
   }
 
-  & > ul > li {
+  &>ul>li {
     padding: 8px;
     padding-left: 32px + 4px;
     position: relative;
@@ -107,45 +117,49 @@
     }
   }
 
-  & > ol > li {
+  &>ol>li {
     padding: 8px;
     padding-left: 10px;
     position: relative;
 
-    & + li {
+    &+li {
       border-top: solid 1px $line-color;
     }
   }
 
-  & > ul > li + li {
+  &>ul>li+li {
     border-top: solid 1px $line-color;
   }
 
-  & > ul > ol,
-  & > ul ul {
+  &>ul>ol,
+  &>ul ul {
     padding-inline-start: 16px;
   }
 
   // Collapse paragraphs together
-  & > p + p {
+  &>p+p {
     border-top: 0;
     margin-top: -1.5em;
   }
-  & > ol > li > p {
+
+  &>ol>li>p {
     margin: 0;
     padding: 0;
   }
-  & > ul > li > p {
+
+  &>ul>li>p {
     margin: 0;
     padding: 0;
   }
-  & > p + p:not(:first-child) {
+
+  &>p+p:not(:first-child) {
     border-top: 0;
     margin-top: -1.5em;
   }
 
   /* Headings in between bodies */
-  & > h6 {  //h4
+  &>h6 {
+    //h4
     @include font-size(-1);
     background: $gray-bg;
     color: $gray-text;
@@ -153,21 +167,21 @@
     margin: 0;
     padding: 4px 16px;
 
-    & + * {
+    &+* {
       border-top: solid 1px $line-color;
     }
   }
 
   // Line divisions
-  & > *:not(:first-child) {
+  &>*:not(:first-child) {
     border-top: solid 1px $line-color;
   }
 }
+
 /*
  * Heading
  */
-
-:is(.h3-section, .h4-section, .h5-section) > :is(h3,h4,h5) {
+:is(.h3-section, .h4-section, .h5-section)> :is(h3, h4, h5) {
   margin-bottom: 16px;
   margin-top: 8px;
   overflow: hidden;
@@ -242,12 +256,12 @@
   //   @include font-size(1);
   // }
 
-  & > .body > ol > li {
+  &>.body>ol>li {
     padding-left: 16px;
     position: relative;
   }
 
-  & > .body > ol > li::before {
+  &>.body>ol>li::before {
     display: none;
   }
 
@@ -255,7 +269,7 @@
   //   background: rgba($base-b3, 0.1);
   // }
 
-  & > .body > ol > li > p > a {
+  &>.body>ol>li>p>a {
     @include font-size(1);
     display: block;
     font-weight: bold;
@@ -266,7 +280,7 @@
   }
 
   // Cover the full card
-  & > .body > ol > li > p > a::before {
+  &>.body>ol>li>p>a::before {
     content: '';
     @include ion-md-arrow-forward(24px, $base-a3);
     position: absolute;
@@ -274,11 +288,12 @@
     top: 50%;
     margin-top: -12px;
   }
-  & > .body > ol > li:hover > p > a::before {
+
+  &>.body>ol>li:hover>p>a::before {
     @include ion-md-arrow-forward(24px, $base-a);
   }
 
-  & > .body > ol > li > p > a::after {
+  &>.body>ol>li>p>a::after {
     content: '';
     position: absolute;
     display: block;
@@ -288,8 +303,7 @@
     right: 0;
   }
 
-  & > .body > ol > li > p em {
+  &>.body>ol>li>p em {
     color: $base-mute;
   }
 }
-
