--- a/source/sass/2017/markdown/code.scss
+++ b/source/sass/2017/markdown/code.scss
@@ -1,41 +1,11 @@
-.MarkdownBody {
-  & code{
-    color: $base-code;
-    font-size: $code-size;
-  }
-  & pre,& code{
-    font-family: $monospace-font;
-  }
-  :not(pre) > code {
-    background-color: $base-inline-code-background-light;
-    color: $base-inline-code;
-    padding: 1px 5px;
-  }
+.MarkdownBody code {
+  color: $gray-text;
+  font-size: $code-size;
+}
 
-  .code-section-list :not(pre) > code {
-    background-color: $base-inline-code-background;
-    color: $base-inline-code;
-    padding: 1px 5px;
-  }
-
-  :is(.h3-section, .h4-section, .h5-section) > .body {
-    & > pre,
-    & > ul,
-    & > ol,
-    & > iframe,
-    & > table {
-      & ~ p > code {
-        background-color: $base-inline-code-background-dark;
-      }
-
-      & ~ ul,
-      & ~ ol {
-        & :not(pre) > code {
-          background-color: $base-inline-code-background-dark;
-        }
-      }
-    }
-  }
+.MarkdownBody pre,
+.MarkdownBody code {
+  font-family: $monospace-font;
 }
 
 // Reduce line height for box drawing characters
@@ -45,10 +15,57 @@
 
 // For figlet.md
 .MarkdownBody pre.-figlet {
-  font-size: 11px;
   line-height: 1;
+  font-size: 11px;
 }
 
+/*
+ * Undo prism theme crap
+ */
+
+.MarkdownBody {
+  pre {
+    box-shadow: none;
+    border-left: 0;
+    overflow: hidden;
+    overflow-x: auto;
+    background: white;
+    font-size: $code-size;
+    line-height: $code-line-height;
+  }
+
+  pre.-wrap {
+    white-space: pre-wrap;
+  }
+
+  pre > code {
+    color: $base-head;
+    max-height: auto;
+    padding: 0;
+    background: transparent;
+    overflow: visible;
+    font-size: 1em;
+  }
+
+  // Line highlight
+  .line-highlight {
+    transform: translate3d(0, 2px, 0);
+    background: linear-gradient(
+      to right,
+      rgba($base-c, 0.05) 25%,
+      transparent);
+  }
+
+  // Line highlight ranges
+  .line-highlight[data-end] {
+    margin-top: 0;
+  }
+
+  .line-highlight::before,
+  .line-highlight::after {
+    display: none;
+  }
+}
 
 .MarkdownBody pre.-setup,
 .MarkdownBody p.-setup,
@@ -58,7 +75,7 @@
 }
 
 /*
- * Syntax highlight
+ * Syntax kighlight
  */
 
 .token {
@@ -69,7 +86,7 @@
   $cB: $base-c;
   $cB-3: adjust-color($cB, $lightness: 8%, $hue: -10deg);
 
-  $cM: #aaa; // Mute
+  $cM: #669; // Mute
 
   &.tag,
   &.keyword {
@@ -94,9 +111,12 @@
     color: $cA-3;
   }
 
-  &.comment,
   &.punctuation,
   &.operator {
     color: $cM;
+  }
+
+  &.comment {
+    color: #569;
   }
 }
