--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -4,30 +4,29 @@
       <%= config.title %>
     </h1>
     <p>
-      <%= config.subtitle %>
+      <%- config.description %>
     </p>
+  </div>
+  <div class='pages-list' role='main'>
+    <%- partial('_partial/recommend') %>
+    
+    <% site.categories.each(function(category,i){ %>
+      <h2 class='category item' id='ruby' data-js-searchable-header>
+        <span>
+          <%= category.name %>
+        </span>
+      </h2>
 
-    <div class='pages-list' role='main'>
-      <%- partial('_partial/recommend') %>
-      
-      <% site.categories.each(function(category,i){ %>
-        <h2 class='category item' id='ruby' data-js-searchable-header>
-          <span>
-            <%= category.name %>
-          </span>
-        </h2>
-
-        <% category.posts.each(function(post,j){ %>
-          <a href="<%- url_for(post.path) %>" class="article item -item-fitness/phat">
-            <span class='info'>
-              <code class='slug'><%= post.slug %></code>
-              <span class='title'>
-                <%= post.title %>
-              </span>
+      <% category.posts.each(function(post,j){ %>
+        <a href="<%- url_for(post.path) %>" class="article item -item-fitness/phat">
+          <span class='info'>
+            <code class='slug'><%= post.slug %></code>
+            <span class='title'>
+              <%= post.title %>
             </span>
-          </a>
+          </span>
+        </a>
+        <% }) %>
           <% }) %>
-            <% }) %>
-    </div>
   </div>
 </div>
