--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -28,6 +28,7 @@
   </section>
   <% } %>
 
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.28.0/prism.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.28.0/plugins/autoloader/prism-autoloader.min.js"></script>
     <%- js(["js/article.js"]) %>
