--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1,3 +1,6 @@
+/*!**********************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./source/sass/2017/style.scss ***!
+  \**********************************************************************************************************************/
 /*! sanitize.css v5.0.0 | CC0 License | github.com/jonathantneal/sanitize.css */
 /* Document (https://html.spec.whatwg.org/multipage/semantics.html#semantics)
    ========================================================================== */
@@ -924,7 +927,8 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
       .MarkdownBody table td:first-child > code ~ em {
         font-size: 12px; } }
   .MarkdownBody table thead {
-    display: none; }
+    border-bottom: solid 1px rgba(85, 102, 119, 0.2);
+    display: table-header-group; }
   .MarkdownBody table thead th {
     color: #745fb5;
     font-weight: normal; }
@@ -954,9 +958,8 @@ html.WithJs.LoadDone .pages-list, html.WithJs.LoadDone
 .MarkdownBody table.-left-align tr td:last-child {
   text-align: left; }
 
-.MarkdownBody table.-headers thead {
-  border-bottom: solid 1px rgba(85, 102, 119, 0.2);
-  display: table-header-group; }
+.MarkdownBody table.-header-less thead {
+  display: none; }
 
 /*
  * Key-value pairs (like in css)
